close button mobile fix

--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -171,6 +171,11 @@ button:hover {
     width: 100%;
     font-size: 15px;
   }
+  .close-btn {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+  }
 
   .project-icon {
     height: 70px;
